# csound-expression-typed

./: README.md  csound-expression-typed.cabal
data/opcodes/: tabQueue2.udo
data/opcodes/MultiFX/: MonoTrem.udo  PitchShifter.udo  TapeEcho.udo
scripts/: up-to-cat.sh
src/Csound/: Typed.hs
src/Csound/Typed/: Arg.hs  Control.hs  Evt.hs  GlobalState.hs  Gui.hs  Midi.hs  Mix.hs  Plugins.hs  Render.hs  Tab.hs  Tuple.hs  TupleHelpers.hs  Types.hs
src/Csound/Typed/Control/: .Evt.hs.swp  .Instr.hs.swo  .Instr.hs.swp  .Midi.hs.swp  .Mix.hs.swp  .\.swp  Api.hs  Evt.hs  Instr.hs  InstrRef.hs  Midi.hs  Mix.hs  Osc.hs  Overload.hs  Ref.hs  SERef.hs  Sf2.hs  Vco.hs
src/Csound/Typed/Control/Overload/: Instr.hs  MidiInstr.hs  SpecInstr.hs
src/Csound/Typed/GlobalState/: Cache.hs  Converters.hs  Elements.hs  GE.hs  Instr.hs  InstrApi.hs  Opcodes.hs  Options.hs  SE.hs
src/Csound/Typed/Gui/: BoxModel.hs  Cab.hs  Gui.hs  Types.hs  Widget.hs
src/Csound/Typed/Gui/Cabbage/: Cabbage.hs  CabbageLang.hs
src/Csound/Typed/Plugins/: Adsr140.hs  Audaciouseq.hs  Diode.hs  Iain.hs  Ian.hs  Korg35.hs  SolinaChorus.hs  TabQueue.hs  TapeEcho.hs  Zdf.hs  ZeroDelayConvolution.hs
src/Csound/Typed/Types/: Arg.hs  Array.hs  Evt.hs  GlobalState.hs  Lift.hs  MixSco.hs  MonoArg.hs  Prim.hs  SERef.hs  SigSpace.hs  Tuple.hs
src/Csound/Typed/Types/GlobalState/: Converters.hs  GE.hs  Instr.hs  Options.hs  SE.hs
